# managlyph

./: CMakeLists.txt  README.md  codex.patch  installer.nsi  managlyph.pro  managlyph.rc  package-windows.sh  resources.qrc
.github/workflows/: ci.yml  linux.yml  windows.yml
assets/containers/: ch4.abo  co.abo  cubane_fb.abo  ethylene.abo  ethylene_fb.abo
assets/containers/catalysis/: co1121_ch_hydrogenation.abo  co1121_co_dissociation.abo
assets/containers/chemistry/: ch4_fb.abo  co_fb.abo
assets/icon/: managlyph_icon.xcf
assets/shaders/: canvas.fs  model.fs  model.vs  phong.fs  phong.vs  simplecanvas.fs  simplecanvas.vs
docs/source/: building_models.rst  community_guidelines.rst  conf.py  file_format.rst  index.rst  installation.rst  usage.rst
docs/source/_static/: custom.css
docs/source/_templates/: breadcrumbs.html
packaging/: package.py  package.sh
scripts/: check-version-sync.sh
src/: config.h  main.cpp  managlyphapplication.cpp  managlyphapplication.h
src/data/: atom.cpp  atom.h  atom_settings.cpp  atom_settings.h  bond.cpp  bond.h  container.cpp  container.h  container.h.rej  container_loader.cpp  container_loader.cpp.rej  container_loader.h  frame.cpp  frame.h  model.cpp  model.h  model_loader.cpp  model_loader.h  orbital_builder.cpp  orbital_builder.h  structure.cpp  structure.h
src/data/orbitals/: edgetable.h  factorial.cpp  factorial.h  integrator.cpp  integrator.h  isosurface.cpp  isosurface.h  isosurface_mesh.cpp  isosurface_mesh.h  laguerre.cpp  laguerre.h  legendre.cpp  legendre.h  scalar_field.cpp  scalar_field.h  triangletable.h  wavefunction.cpp  wavefunction.h
src/gui/: anaglyph_widget.cpp  anaglyph_widget.h  interface_window.cpp  interface_window.cpp.rej  interface_window.h  lighting_settings_dialog.cpp  lighting_settings_dialog.h  logwindow.cpp  logwindow.h  mainwindow.cpp  mainwindow.h  orbital_widget.cpp  orbital_widget.h  periodic_table.cpp  periodic_table.h  scene.cpp  scene.h  shader_program.cpp  shader_program.h  shader_program_manager.cpp  shader_program_manager.h  shader_program_types.h  structure_renderer.cpp  structure_renderer.h  visualisation_settings_dialog.cpp  visualisation_settings_dialog.h
